force-app/main/default/objects/LMS_Assignment__c/LMS_Assignment__c.object-meta.xml
<CustomObject>
    <label>LMS Assignment</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>LMS Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LMS Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>