force-app/main/default/objects/LMS_Assignment__c/fields/LMS_Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>LMS_Assigned_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>LMS Assignments</relationshipLabel>
    <relationshipName>LMS_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>