force-app/main/default/objects/LMS_Assignment__c/fields/LMS_Assignment_Method__c.field-meta.xml
<CustomField>
    <fullName>LMS_Assignment_Method__c</fullName>
    <label>Assignment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Specific Users</fullName>
            </value>
            <value>
                <fullName>User Status</fullName>
            </value>
            <value>
                <fullName>Department</fullName>
            </value>
            <value>
                <fullName>All Users</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>