force-app/main/default/objects/LMS_Assignment__c/fields/LMS_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>LMS_Completion_Date__c</fullName>
    <label>Completion Date</label>
    <type>DateTime</type>
</CustomField>