force-app/main/default/objects/LMS_Assignment__c/fields/LMS_Quiz_Answer__c.field-meta.xml
<CustomField>
    <fullName>LMS_Quiz_Answer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quiz Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>