force-app/main/default/objects/LMS_Assignment__c/fields/LMS_Video_Duration_Seconds__c.field-meta.xml
<CustomField>
    <fullName>LMS_Video_Duration_Seconds__c</fullName>
    <label>Video Duration Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>