force-app/main/default/objects/LMS_Assignment__c/fields/LMS_Video_Ended_At__c.field-meta.xml
<CustomField>
    <fullName>LMS_Video_Ended_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Video Ended At</label>
    <type>DateTime</type>
</CustomField>