force-app/main/default/objects/LMS_Assignment__c/fields/LMS_Video_Reached_End__c.field-meta.xml
<CustomField>
    <fullName>LMS_Video_Reached_End__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Video Reached End</label>
    <type>Checkbox</type>
</CustomField>