force-app/main/default/objects/LMS_Assignment__c/fields/LMS_Video_Skipped__c.field-meta.xml
<CustomField>
    <fullName>LMS_Video_Skipped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Video Skipped</label>
    <type>Checkbox</type>
</CustomField>