force-app/main/default/objects/LMS_Assignment__c/fields/LMS_Video_Started_At__c.field-meta.xml
<CustomField>
    <fullName>LMS_Video_Started_At__c</fullName>
    <label>Video Started At</label>
    <type>DateTime</type>
</CustomField>