force-app/main/default/objects/LMS_Assignment__c/fields/LMS_Video_Watched_Percent__c.field-meta.xml
<CustomField>
    <fullName>LMS_Video_Watched_Percent__c</fullName>
    <label>Video Watched Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>